--- a/week01/template2.html
+++ b/week01/template2.html
@@ -14,10 +14,11 @@
             }
 
             nav{
+                margin: 0;
                 background: #5920df; 
                 height: 54px;
                 width: 100%;
-                box-shadow: 0px 4px 7px #888888;
+                box-shadow: 0px 3px 5px #0e0d0d;
             }
 
             nav ul li a {
@@ -31,18 +32,24 @@
 
             header{
                 background-color:#5920df;
-                width: 100%;
+                display: flex;
+                flex-flow: column;
                 height: 500px;
-                padding: 150px 16px;
+                justify-content: center;
+                align-items: center;
             }
 
-            .headerH1 {
+            header h1 {
                 font-size: 70px;
-                text-align: center;
+                /* text-align: center; */
                 font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
                 color: white;
             }
-
+            header p {
+                font-size: 30px;
+                color: white;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            }
             a:hover, a.active {
                 background-color:white;
                 color: black;
@@ -71,6 +78,7 @@
                     width: 100%;
                     height: 100vh;
                     background: #2c3e50;
+
                     top: 80px;
                     left: -100%;
                     text-align: center;
@@ -96,6 +104,22 @@
     </head>
     <body>
         <div>
+            <!-- <nav>
+                <input type="checkbox" id="check">
+                <label for="check" class='menu'>
+                    <i class='fas fa-bars'></i>
+                </label>
+                <ul>
+                    <li><a class='active' href="#">Home</a></li>
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li>
+                    <li><a href="#">Link 3</a></li>
+                    <li><a href="#">Link 4</a></li>
+                </ul>    
+            </nav> -->
+        </div>
+        <header>
+            
             <nav>
                 <input type="checkbox" id="check">
                 <label for="check" class='menu'>
@@ -109,9 +133,8 @@
                     <li><a href="#">Link 4</a></li>
                 </ul>    
             </nav>
-        </div>
-        <header>
-            <h1 class="headerH1">START PAGE</h1>
+            <h1>START PAGE</h1>
+            <p>Template by w3.css</p>
         </header>
     </body>
 </html>
