--- a/week02/template2.html
+++ b/week02/template2.html
@@ -54,15 +54,19 @@
                 color: white;
                 background-color: black;
                 font-family: Inconsolata, sans-serif;
+                font-size: 20px;
             }
 
             header div#header-content label#label2 {
                 color: white;
                 font-family: Inconsolata, sans-serif;
+                font-size: 150px;
+              
             }
             header div#header-content label#label3 {
                 color: white;
                 font-family: Inconsolata, sans-serif;
+                font-size: 20px;
             }
 
             #header-content {
@@ -73,7 +77,14 @@
                 width: 100%;
             }
             .content1 {
-                padding-top: 200px;
+                margin-top: 800px;
+                margin-left: 40px;
+                background-color: black;
+                padding: 6px 11px;
+            }
+            .content3 {
+                margin-top: 800px;
+                margin-right: 40px;
             }
         </style>
     </head>
@@ -101,7 +112,7 @@
                         <label id="label1">Open from 6am to 5pm</label>
                     </div>
                     <div class="content2">
-                         <label id="label2">the </br>Cafe</label>
+                         <label id="label2"> the </br>Cafe</label>
                     </div>
                     <div class="content3">
                          <label id="label3">15 Adr street, 5015</label>
