--- a/week02/template1.html
+++ b/week02/template1.html
@@ -126,7 +126,7 @@
         </style>
     </head>
     <body>
-        <div >
+        <div id="headerDiv">
             <header>
                 <a id="left" href="#">MY ART</a>
                 <a id="right" href="#about">About</a>
