--- a/week02/template3.html
+++ b/week02/template3.html
@@ -269,9 +269,11 @@
                 color: white;
                 text-align: center;
             }
+
+            /* ------------------------------- lower right Css */
+
             #contact-form {
                 padding: 64px 24px;
-
             }
             #contact-form h1 {
                 color: white;
@@ -417,7 +419,7 @@
                                         </tr>
                                         <tr style="background-color: white;">
                                             <td style="padding: 8px 8px 8px 16px;">2012-2016</td>
-                                            <td style="padding: ">The rest is history..</td>
+                                            <td style="padding: 8px">The rest is history..</td>
                                             <td style="padding: 8px;">Lorem ipsum</td>
                                           </tr>
                                           <tr style="color: white;">
